projects/compiler/test/parser/decorator_error_bad_ident.out
Error at %FILE_NAME%:1:2
Unexpected token 'int', expected 'identifier':
  |  @1Foo
      ^